--- a/src/pug/components/faq.pug
+++ b/src/pug/components/faq.pug
@@ -10,7 +10,7 @@ mixin faq()
 
   section.questions
     .container
-      h2.questions__title Часто задаваемые вопросы
+      h2.questions__title Ответы на часто задаваемые вопросы:
       ul.questions__list.js-accordions
         each item in questionsList
           li.questions__list-item.js-accordion
