--- a/src/pug/layout/index.pug
+++ b/src/pug/layout/index.pug
@@ -6,6 +6,7 @@ html(lang="ru")
   body
     .page-content
       include ../parts/header
+      include ../parts/burger-modal
 
       main.page-main
         block page
