--- a/src/pug/parts/header.pug
+++ b/src/pug/parts/header.pug
@@ -14,4 +14,7 @@ header.header
         a(href='#').header__icon-wrapper
           include ../../assets/icons/loop.svg
         a(href="#").button.header__button-contact Стать абонентом
-
+      button.header__burger-btn.js-burger-button
+        span
+        span
+        span
