--- a/src/scss/components/application.scss
+++ b/src/scss/components/application.scss
@@ -21,6 +21,10 @@
 
     width: 100%;
     max-width: 99.5rem;
+
+    @include breakpoint(tablet) {
+      font-size: 3rem;
+    }
   }
 
   &__form {
@@ -55,6 +59,13 @@
     border: 0.2rem solid white;
     border-radius: 1rem;
     width: 100%;
+
+    @include breakpoint(tablet) {
+      font-family: var(--font-family);
+      font-weight: 500;
+      font-size: 2rem;
+      color: #fff;
+    }
 
     &::placeholder {
       color: white;
@@ -96,6 +107,11 @@
       height: 2.5rem;
       border: 0.2rem solid white;
       content: '';
+
+      @include breakpoint(tablet) {
+        top: 0;
+        transform: translateY(0);
+      }
     }
 
     &::after {
@@ -109,6 +125,11 @@
       content: '';
       background-size: contain;
       background-image: url("data:image/svg+xml,%3Csvg width='24' height='23' viewBox='0 0 24 23' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect y='14.7095' width='2' height='10' transform='rotate(-40.7422 0 14.7095)' fill='white'/%3E%3Crect x='6.52637' y='22.2861' width='2' height='21.9045' transform='rotate(-130.742 6.52637 22.2861)' fill='white'/%3E%3C/svg%3E");
+
+      @include breakpoint(tablet) {
+        top: -.4rem;
+        transform: translateY(0);
+      }
     }
   }
 
@@ -117,6 +138,18 @@
     margin-top: 8.2rem;
     max-width: 45rem;
     text-align: center;
+
+    @include breakpoint(tablet) {
+      margin-top: 3.2rem;
+      border-radius: 1rem;
+      width: 32rem;
+      height: 7.5rem;
+
+      font-family: var(--font-family);
+      font-weight: 500;
+      font-size: 2.8rem;
+      color: #fff;
+    }
   }
 }
 
