--- a/src/scss/components/banner.scss
+++ b/src/scss/components/banner.scss
@@ -1,8 +1,14 @@
 .banner {
   width: 100%;
   min-height: 100vh;
-  min-height: 100svg;
   position: relative;
+
+  .container {
+    @include breakpoint(tablet) {
+      height: 100vh;
+      padding-bottom: 22rem;
+    }
+  }
 
   &__overlay {
     position: absolute;
@@ -18,6 +24,13 @@
     min-height: calc(100svh - 7.5rem);
     max-width: 1920rem;
     z-index: -1;
+
+    @include breakpoint(tablet) {
+      min-height: 0;
+      height: calc(100vh - 10rem);
+      background-image: url("../assets/img/banner-mobile.jpg");
+      z-index: 0;
+    }
   }
 
   &__content {
@@ -26,6 +39,14 @@
     flex-direction: column;
     align-items: flex-start;
     row-gap: 20rem;
+    position: relative;
+    z-index: 2;
+
+    @include breakpoint(tablet) {
+      height: 100%;
+      row-gap: 1rem;
+      justify-content: flex-end;
+    }
   }
 
   &__title {
@@ -36,6 +57,14 @@
     color: #000;
     width: 100%;
     max-width: 63.5rem;
+
+    @include breakpoint(tablet) {
+      font-family: var(--font-family);
+      font-weight: 700;
+      font-size: 4rem;
+      line-height: 100%;
+      color: #000;
+    }
   }
 
   &__tariifs-text {
@@ -44,5 +73,13 @@
     font-size: 4.8rem;
     line-height: 1.1;
     color: #fe5000;
+
+    @include breakpoint(tablet) {
+      font-family: var(--font-family);
+      font-weight: 700;
+      font-size: 2.2rem;
+      line-height: 289%;
+      color: #fe5000;
+    }
   }
 }
