--- a/src/scss/components/extra.scss
+++ b/src/scss/components/extra.scss
@@ -4,6 +4,10 @@
   background-color: #fe5000;
   padding-bottom: 13rem;
 
+  @include breakpoint(tablet) {
+    padding-top: 8.5rem;
+  }
+
   &__title {
     font-family: var(--font-family);
     font-weight: 700;
@@ -13,6 +17,13 @@
     width: 100%;
     max-width: 106.6rem;
     margin-bottom: 5rem;
+
+    @include breakpoint(tablet) {
+      font-family: var(--font-family);
+      font-weight: 700;
+      font-size: 3.2rem;
+      line-height: 100%;
+    }
   }
 
   &__card {
@@ -23,6 +34,10 @@
     box-shadow: 0 3px 20px 0 rgba(0, 0, 0, 0.49);
     background: #fff;
     padding: 5.2rem;
+
+    @include breakpoint(laptop) {
+      padding: 1.3rem;
+    }
   }
 
   &__card-title {
@@ -33,12 +48,29 @@
     color: #000;
     text-align: center;
     margin-bottom: 5rem;
+
+    @include breakpoint(laptop) {
+      font-family: var(--font-family);
+      font-weight: 700;
+      font-size: 2.4rem;
+      line-height: 83%;
+      text-align: center;
+      color: #fe5000;
+      width: 100%;
+      max-width: 29.5rem;
+      margin-bottom: 3rem;
+    }
   }
 
   &__card-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    @include breakpoint(laptop) {
+      flex-direction: column;
+      justify-content: center;
+    }
   }
 
   &__card-list {
@@ -46,6 +78,10 @@
     flex-direction: column;
     align-items: flex-start;
     row-gap: 4rem;
+
+    @include breakpoint(tablet) {
+      row-gap: 2rem;
+    }
   }
 
   &__card-item {
@@ -54,9 +90,17 @@
     width: 100%;
     max-width: 62.2rem;
 
+    @include breakpoint(tablet) {
+      grid-template-columns: .25fr 1fr;
+    }
+
     &:last-child .extra__card-icon {
       width: auto;
       height: 4rem;
+
+      @include breakpoint(tablet) {
+        height: 2.5rem;
+      }
     }
   }
 
@@ -64,6 +108,10 @@
     width: auto;
     height: 5.8rem;
     object-fit: cover;
+
+    @include breakpoint(laptop) {
+      height: 3.8rem;
+    }
   }
 
   &__card-text {
@@ -72,6 +120,16 @@
     font-size: 3.2rem;
     line-height: 106%;
     color: #2b2b2b;
+
+    @include breakpoint(laptop) {
+      font-family: var(--font-family);
+      font-weight: 700;
+      font-size: 2rem;
+      line-height: 100%;
+      color: #2b2b2b;
+      width: 100%;
+      max-width: 20rem;
+    }
   }
 
   &__card-column {
@@ -80,6 +138,10 @@
     justify-content: space-between;
     row-gap: 3rem;
     height: 100%;
+
+    @include breakpoint(laptop) {
+      row-gap: 1rem;
+    }
   }
 
   &__card-wrapper {
@@ -92,6 +154,14 @@
     font-size: 20rem;
     line-height: 1.1;
     color: #fe5000;
+
+    @include breakpoint(laptop) {
+      font-family: var(--font-family);
+      font-weight: 700;
+      font-size: 12.5rem;
+      text-align: center;
+      color: #fe5000;
+    }
   }
 
   &__card-cost-text {
@@ -100,6 +170,14 @@
     font-size: 3.2rem;
     line-height: 106%;
     color: #2b2b2b;
+
+    @include breakpoint(laptop) {
+      font-family: var(--font-family);
+      font-weight: 700;
+      font-size: 3rem;
+      line-height: 106%;
+      text-align: center;
+    }
   }
 
   &__bottom-text {
@@ -108,5 +186,12 @@
     font-size: 3.2rem;
     line-height: 106%;
     color: #fa4907;
+    @include breakpoint(laptop) {
+      font-family: var(--font-family);
+      font-weight: 700;
+      font-size: 2.8rem;
+      line-height: 106%;
+      text-align: center;
+    }
   }
 }
