--- a/src/scss/components/info.scss
+++ b/src/scss/components/info.scss
@@ -4,6 +4,10 @@
   position: relative;
   padding-top: 4.5rem;
 
+  @include breakpoint(tablet) {
+    margin-top: 12.5rem;
+  }
+
   &__overlay {
     width: 100%;
     position: absolute;
@@ -26,6 +30,13 @@
     line-height: 79%;
     color: #000;
     margin-bottom: 6rem;
+
+    @include breakpoint(tablet) {
+      font-family: var(--font-family);
+      font-weight: 700;
+      font-size: 3rem;
+      line-height: 100%;
+    }
   }
 
   &__cards {
@@ -33,19 +44,32 @@
     grid-template-columns: repeat(2, minmax(0, 1fr));
     column-gap: 9.5rem;
     row-gap: 3.7rem;
+
+    @include breakpoint(laptop) {
+      grid-template-columns: 1fr;
+      row-gap: 2rem;
+    }
   }
 
   &__card {
     border-radius: 2rem;
-    width: 50rem;
+    width: 100%;
+    max-width: 50rem;
     height: 20rem;
     box-shadow: 0 3px 20px 0 rgba(0, 0, 0, 0.49);
     background: #fff;
     display: flex;
     align-items: center;
     justify-content: center;
+    row-gap: 3.9rem;
     column-gap: 2.2rem;
     padding: 4.8rem 2.2rem;
+
+    @include breakpoint(tablet) {
+      padding: 1.8rem 3.2rem;
+      height: 10rem;
+      row-gap: 2rem;
+    }
   }
 
   &__card-title {
@@ -56,11 +80,22 @@
     color: #2b2b2b;
     width: 100%;
     max-width: 27.5rem;
+
+    @include breakpoint(tablet) {
+      font-family: var(--font-family);
+      font-weight: 700;
+      font-size: 2rem;
+      line-height: 100%;
+    }
   }
 
   &__card-icon {
     width: auto;
     height: 10.1rem;
     object-fit: cover;
+
+    @include breakpoint(tablet) {
+      height: 5.2rem;
+    }
   }
 }
