--- a/src/scss/components/tariffs.scss
+++ b/src/scss/components/tariffs.scss
@@ -18,6 +18,10 @@
     background-size: cover;
     max-width: 1920rem;
     z-index: -1;
+
+    @include breakpoint(tablet) {
+      top: -5rem;
+    }
   }
 
   &__title {
@@ -27,6 +31,14 @@
     line-height: 1.1;
     color: #000;
     margin-bottom: 4.5rem;
+
+    @include breakpoint(tablet) {
+      font-family: var(--font-family);
+      font-weight: 700;
+      font-size: 3rem;
+      line-height: 100%;
+      color: #000;
+    }
   }
 
   &__cards {
@@ -34,16 +46,28 @@
     grid-template-columns: repeat(2, minmax(0, 1fr));
     column-gap: 9.5rem;
     row-gap: 2.7rem;
+
+    @include breakpoint(laptop) {
+      grid-template-columns: 1fr;
+    }
   }
 
   &__card {
     border-radius: 1.8rem;
-    width: 50rem;
+    width: 100%;
+    max-width: 50rem;
     height: 30.5rem;
     box-shadow: 0 3px 20px 0 rgba(0, 0, 0, 0.49);
     background: #fff;
     padding: 2.8rem 1.8rem;
     position: relative;
+
+
+    @include breakpoint(laptop) {
+      grid-template-columns: 1fr;
+      padding: 1.6rem;
+      height: 18rem;
+    }
   }
 
   &__card-title {
@@ -55,6 +79,13 @@
     width: 100%;
     max-width: 46rem;
     margin-bottom: 2.5rem;
+
+    @include breakpoint(tablet) {
+      font-family: var(--font-family);
+      font-weight: 700;
+      font-size: 2.4rem;
+      margin-bottom: 1.6rem;
+    }
   }
 
   &__card-text {
@@ -65,6 +96,14 @@
     color: #2b2b2b;
     width: 100%;
     max-width: 46rem;
+
+    @include breakpoint(tablet) {
+      font-family: var(--font-family);
+      font-weight: 400;
+      font-size: 2rem;
+      line-height: 160%;
+      color: #2b2b2b;
+    }
   }
 
   &__card-icon {
@@ -74,5 +113,11 @@
     position: absolute;
     bottom: 2.8rem;
     right: 1.8rem;
+
+    @include breakpoint(laptop) {
+      max-width: 5rem;
+      max-height: 5rem;
+      bottom: 1rem;
+    }
   }
 }
