--- a/src/scss/components/tariffs.scss
+++ b/src/scss/components/tariffs.scss
@@ -1,6 +1,6 @@
 .tariffs {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   position: relative;
   padding-top: 4.5rem;
 
@@ -11,7 +11,7 @@
     right: 0;
     bottom: 0;
     top: -20rem;
-    height: 100vh;
+    min-height: 100vh;
     background-image: url("../assets/img/background-figure.jpg");
     background-position: center;
     background-repeat: no-repeat;
