--- a/src/scss/components/faq.scss
+++ b/src/scss/components/faq.scss
@@ -54,6 +54,17 @@
     }
   }
 
+  &__list-item-title {
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 3.5rem;
+    color: #fff;
+
+    @include breakpoint(tablet) {
+      font-size: 1.6rem;
+    }
+  }
+
   &__list-item-cross {
     position: absolute;
     top: 50%;
@@ -76,10 +87,14 @@
 
   &__list-item-content {
     padding: 2.5rem 12rem 4.4rem 3.2rem;
-    color: #2b2b2b;
 
+    font-family: var(--font-family);
+    font-weight: 400;
+    font-size: 3.5rem;
     @include breakpoint(tablet) {
       padding: 1rem 2.7rem;
+      font-family: var(--font-family);
+      font-size: 1.6rem;
     }
   }
 }
