rechange banner added modal

--- a/src/pug/components/banner.pug
+++ b/src/pug/components/banner.pug
@@ -5,3 +5,4 @@ mixin banner()
       .banner__content
         h1.banner__title Услуг много - платеж один!
         p.banner__tariifs-text 0 рублей - первый месяц
+        img.banner__tariffs-img(src="assets/img/banner-tariffs.png", alt="icon")
