--- a/src/pug/components/tariffs.pug
+++ b/src/pug/components/tariffs.pug
@@ -1,5 +1,5 @@
 mixin tariffs(data)
-  section.tariffs
+  section.tariffs(id="tariffs")
     .container
       .tariffs__overlay
       h2.tariffs__title Почему стоит выбрать «Все и сразу»?
