--- a/src/pug/parts/header.pug
+++ b/src/pug/parts/header.pug
@@ -5,7 +5,7 @@ header.header
         include ../../assets/icons/header-logo.svg
       .header__right-column
         nav.header__navigation
-          a(href="#").header__link Мобильная связь
+          a(href="#tariffs").header__link Мобильная связь
           a(href="#").header__link Интернет
           a(href="#").header__link Телевидение
           a(href="#").header__link Домофон
